Perplexity test on ARC

--- a/jupyter/colored_inference.ipynb
+++ b/jupyter/colored_inference.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "85995f60-1839-4667-ac9e-d8c7d5ee3bc6",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
+   "id": "fa1bdf78-e689-4d83-8d02-9c9e4f71c7a6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def load_model(model_id=\"Qwen/Qwen3-0.6B\", dtype=torch.float16):\n",
+    "    tokenizer = AutoTokenizer.from_pretrained(model_id)\n",
+    "    model = AutoModelForCausalLM.from_pretrained(\n",
+    "        model_id,\n",
+    "        device_map=\"auto\",\n",
+    "        torch_dtype=dtype\n",
+    "    )\n",
+    "    model.eval()\n",
+    "    return tokenizer, model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "id": "13c0c08d-9b7e-49eb-9361-ddd3911270f1",
    "metadata": {},
    "outputs": [],
@@ -25,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 6,
    "id": "837da4c7-d664-40a9-b3e7-0b6978c87139",
    "metadata": {},
    "outputs": [],
@@ -121,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 7,
    "id": "2e99b176-8288-400f-b82d-f70789f36d83",
    "metadata": {},
    "outputs": [],
@@ -144,21 +162,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 8,
    "id": "50203565-f3f4-4dbc-9941-bd4679102e0d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def load_model(model_id=\"Qwen/Qwen3-0.6B\", dtype=torch.float16):\n",
-    "    tokenizer = AutoTokenizer.from_pretrained(model_id)\n",
-    "    model = AutoModelForCausalLM.from_pretrained(\n",
-    "        model_id,\n",
-    "        device_map=\"auto\",\n",
-    "        torch_dtype=dtype\n",
-    "    )\n",
-    "    model.eval()\n",
-    "    return tokenizer, model\n",
-    "\n",
     "def generate_next_token(model, input_ids):\n",
     "    \"\"\"다음 토큰과 top-5 후보 반환\"\"\"\n",
     "    with torch.no_grad():\n",
@@ -201,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 9,
    "id": "c4db778d-4fe2-4726-8e9d-3b902ea5f1c3",
    "metadata": {},
    "outputs": [
@@ -209,78 +217,75 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Input: What is 2 + 2? Answer briefly.\n",
+      "Input: Is the Moon Earth's satellite?\n",
       "\n",
       "== Top-5 Tokens ==\n",
-      "\u001b[48;2;178;207;51m    ' ' (0.2024)    \u001b[0m | \u001b[48;2;203;216;25m  ' The' (0.1626)   \u001b[0m | \u001b[48;2;229;226;0m  ' What' (0.0780)  \u001b[0m | \u001b[48;2;229;226;0m  ' \\n\\n' (0.0721)  \u001b[0m | \u001b[48;2;229;226;0m   ' A' (0.0369)    \u001b[0m\n",
+      "\u001b[48;2;152;198;76m  ' Yes' (0.3269)   \u001b[0m | \u001b[48;2;203;216;25m  ' What' (0.1384)  \u001b[0m | \u001b[48;2;229;226;0m   ' If' (0.0664)   \u001b[0m | \u001b[48;2;229;226;0m  ' And' (0.0449)   \u001b[0m | \u001b[48;2;229;226;0m   ' Is' (0.0432)   \u001b[0m\n",
       "\n",
       "== Top-5 Tokens ==\n",
-      "\u001b[48;2;50;161;178m    '2' (0.7310)    \u001b[0m | \u001b[48;2;229;226;0m    '1' (0.0670)    \u001b[0m | \u001b[48;2;229;226;0m    '3' (0.0307)    \u001b[0m | \u001b[48;2;229;226;0m    ' ' (0.0207)    \u001b[0m | \u001b[48;2;229;226;0m    '4' (0.0137)    \u001b[0m\n",
+      "\u001b[48;2;101;179;127m    ',' (0.5190)    \u001b[0m | \u001b[48;2;203;216;25m    '.' (0.1880)    \u001b[0m | \u001b[48;2;229;226;0m  '.\\n\\n' (0.0725)  \u001b[0m | \u001b[48;2;229;226;0m  '\\n\\n' (0.0630)   \u001b[0m | \u001b[48;2;229;226;0m   '\\n' (0.0530)    \u001b[0m\n",
       "\n",
       "== Top-5 Tokens ==\n",
-      "\u001b[48;2;50;161;178m   ' +' (0.7778)    \u001b[0m | \u001b[48;2;229;226;0m    '+' (0.0529)    \u001b[0m | \u001b[48;2;229;226;0m   ' is' (0.0316)   \u001b[0m | \u001b[48;2;229;226;0m    '2' (0.0238)    \u001b[0m | \u001b[48;2;229;226;0m  ' plus' (0.0169)  \u001b[0m\n",
+      "\u001b[48;2;76;170;153m  ' the' (0.6934)   \u001b[0m | \u001b[48;2;229;226;0m   ' it' (0.0828)   \u001b[0m | \u001b[48;2;229;226;0m  ' and' (0.0472)   \u001b[0m | \u001b[48;2;229;226;0m  ' but' (0.0345)   \u001b[0m | \u001b[48;2;229;226;0m' because' (0.0234) \u001b[0m\n",
       "\n",
       "== Top-5 Tokens ==\n",
-      "\u001b[48;2;0;143;230m    ' ' (0.9927)    \u001b[0m | \u001b[48;2;229;226;0m    '2' (0.0014)    \u001b[0m | \u001b[48;2;229;226;0m   ' (' (0.0009)    \u001b[0m | \u001b[48;2;229;226;0m' something' (0.0008)\u001b[0m | \u001b[48;2;229;226;0m   ' ?' (0.0005)    \u001b[0m\n",
+      "\u001b[48;2;0;143;230m  ' Moon' (0.9229)  \u001b[0m | \u001b[48;2;229;226;0m ' Earth' (0.0505)  \u001b[0m | \u001b[48;2;229;226;0m  ' moon' (0.0164)  \u001b[0m | \u001b[48;2;229;226;0m  ' Sun' (0.0016)   \u001b[0m | \u001b[48;2;229;226;0m  'Moon' (0.0003)   \u001b[0m\n",
       "\n",
       "== Top-5 Tokens ==\n",
-      "\u001b[48;2;0;143;230m    '2' (0.9551)    \u001b[0m | \u001b[48;2;229;226;0m    '3' (0.0251)    \u001b[0m | \u001b[48;2;229;226;0m    '1' (0.0109)    \u001b[0m | \u001b[48;2;229;226;0m    '4' (0.0041)    \u001b[0m | \u001b[48;2;229;226;0m    '5' (0.0016)    \u001b[0m\n",
+      "\u001b[48;2;0;143;230m   ' is' (0.9473)   \u001b[0m | \u001b[48;2;229;226;0m ' orbits' (0.0153) \u001b[0m | \u001b[48;2;229;226;0m  ' does' (0.0053)  \u001b[0m | \u001b[48;2;229;226;0m  ' and' (0.0042)   \u001b[0m | \u001b[48;2;229;226;0m  ' has' (0.0041)   \u001b[0m\n",
       "\n",
       "== Top-5 Tokens ==\n",
-      "\u001b[48;2;152;198;76m   ' is' (0.3840)   \u001b[0m | \u001b[48;2;152;198;76m   ' =' (0.3037)    \u001b[0m | \u001b[48;2;203;216;25m ' equals' (0.1527) \u001b[0m | \u001b[48;2;229;226;0m   ' +' (0.0459)    \u001b[0m | \u001b[48;2;229;226;0m  '.\\n\\n' (0.0194)  \u001b[0m\n",
+      "\u001b[48;2;127;189;102m ' Earth' (0.4414)  \u001b[0m | \u001b[48;2;178;207;51m ' indeed' (0.2720) \u001b[0m | \u001b[48;2;203;216;25m  ' the' (0.1455)   \u001b[0m | \u001b[48;2;229;226;0m   ' a' (0.0626)    \u001b[0m | \u001b[48;2;229;226;0m   ' an' (0.0208)   \u001b[0m\n",
       "\n",
       "== Top-5 Tokens ==\n",
-      "\u001b[48;2;25;152;204m    ' ' (0.8740)    \u001b[0m | \u001b[48;2;229;226;0m ' equal' (0.0950)  \u001b[0m | \u001b[48;2;229;226;0m   ' a' (0.0047)    \u001b[0m | \u001b[48;2;229;226;0m   '...' (0.0038)   \u001b[0m | \u001b[48;2;229;226;0m  ' the' (0.0029)   \u001b[0m\n",
+      "\u001b[48;2;0;143;230m   \"'s\" (0.9946)    \u001b[0m | \u001b[48;2;229;226;0m   '’s' (0.0052)    \u001b[0m | \u001b[48;2;229;226;0m    's' (0.0000)    \u001b[0m | \u001b[48;2;229;226;0m   'ly' (0.0000)    \u001b[0m | \u001b[48;2;229;226;0m   \" '\" (0.0000)    \u001b[0m\n",
       "\n",
       "== Top-5 Tokens ==\n",
-      "\u001b[48;2;0;143;230m    '4' (0.9751)    \u001b[0m | \u001b[48;2;229;226;0m    '2' (0.0107)    \u001b[0m | \u001b[48;2;229;226;0m    '3' (0.0079)    \u001b[0m | \u001b[48;2;229;226;0m    '5' (0.0023)    \u001b[0m | \u001b[48;2;229;226;0m    '1' (0.0015)    \u001b[0m\n",
+      "\u001b[48;2;101;179;127m' satellite' (0.5142)\u001b[0m | \u001b[48;2;178;207;51m' natural' (0.2976) \u001b[0m | \u001b[48;2;229;226;0m  ' only' (0.0654)  \u001b[0m | \u001b[48;2;229;226;0m  ' moon' (0.0350)  \u001b[0m | \u001b[48;2;229;226;0m' largest' (0.0273) \u001b[0m\n",
       "\n",
       "== Top-5 Tokens ==\n",
-      "\u001b[48;2;127;189;102m  '.\\n\\n' (0.4106)  \u001b[0m | \u001b[48;2;178;207;51m   '.\\n' (0.2866)   \u001b[0m | \u001b[48;2;178;207;51m    '.' (0.2778)    \u001b[0m | \u001b[48;2;229;226;0m    ',' (0.0124)    \u001b[0m | \u001b[48;2;229;226;0m    '?' (0.0024)    \u001b[0m\n",
+      "\u001b[48;2;76;170;153m    '.' (0.6714)    \u001b[0m | \u001b[48;2;203;216;25m    ',' (0.1475)    \u001b[0m | \u001b[48;2;229;226;0m  '.\\n\\n' (0.0853)  \u001b[0m | \u001b[48;2;229;226;0m   '.\\n' (0.0577)   \u001b[0m | \u001b[48;2;229;226;0m  ' and' (0.0096)   \u001b[0m\n",
       "\n",
       "== Top-5 Tokens ==\n",
-      "\u001b[48;2;203;216;25m   '**' (0.1451)    \u001b[0m | \u001b[48;2;229;226;0m   'The' (0.0881)   \u001b[0m | \u001b[48;2;229;226;0m  'What' (0.0686)   \u001b[0m | \u001b[48;2;229;226;0m  'Okay' (0.0596)   \u001b[0m | \u001b[48;2;229;226;0m   'But' (0.0403)   \u001b[0m\n",
+      "\u001b[48;2;178;207;51m  ' The' (0.2510)   \u001b[0m | \u001b[48;2;203;216;25m   ' It' (0.1167)   \u001b[0m | \u001b[48;2;229;226;0m  ' Yes' (0.0670)   \u001b[0m | \u001b[48;2;229;226;0m  ' What' (0.0526)  \u001b[0m | \u001b[48;2;229;226;0m   ' So' (0.0526)   \u001b[0m\n",
       "\n",
       "== Top-5 Tokens ==\n",
-      "\u001b[48;2;178;207;51m'Question' (0.2520) \u001b[0m | \u001b[48;2;229;226;0m  'Final' (0.0941)  \u001b[0m | \u001b[48;2;229;226;0m  'Step' (0.0710)   \u001b[0m | \u001b[48;2;229;226;0m 'Answer' (0.0431)  \u001b[0m | \u001b[48;2;229;226;0m    'Q' (0.0278)    \u001b[0m\n",
+      "\u001b[48;2;76;170;153m  ' Moon' (0.6978)  \u001b[0m | \u001b[48;2;203;216;25m ' Earth' (0.1509)  \u001b[0m | \u001b[48;2;229;226;0m ' answer' (0.0198) \u001b[0m | \u001b[48;2;229;226;0m  ' Sun' (0.0139)   \u001b[0m | \u001b[48;2;229;226;0m  ' moon' (0.0116)  \u001b[0m\n",
       "\n",
       "== Top-5 Tokens ==\n",
-      "\u001b[48;2;101;179;127m  '**\\n' (0.5942)   \u001b[0m | \u001b[48;2;203;216;25m    ':' (0.1702)    \u001b[0m | \u001b[48;2;229;226;0m   '**' (0.0911)    \u001b[0m | \u001b[48;2;229;226;0m   ':**' (0.0579)   \u001b[0m | \u001b[48;2;229;226;0m   '**:' (0.0216)   \u001b[0m\n",
+      "\u001b[48;2;127;189;102m   ' is' (0.4702)   \u001b[0m | \u001b[48;2;178;207;51m ' orbits' (0.2186) \u001b[0m | \u001b[48;2;229;226;0m  ' has' (0.0926)   \u001b[0m | \u001b[48;2;229;226;0m   \"'s\" (0.0926)    \u001b[0m | \u001b[48;2;229;226;0m  ' does' (0.0170)  \u001b[0m\n",
       "\n",
       "== Top-5 Tokens ==\n",
-      "\u001b[48;2;101;179;127m  'What' (0.5073)   \u001b[0m | \u001b[48;2;203;216;25m  'Which' (0.1030)  \u001b[0m | \u001b[48;2;229;226;0m   'How' (0.0543)   \u001b[0m | \u001b[48;2;229;226;0m   'If' (0.0253)    \u001b[0m | \u001b[48;2;229;226;0m    'A' (0.0234)    \u001b[0m\n",
+      "\u001b[48;2;152;198;76m   ' a' (0.3503)    \u001b[0m | \u001b[48;2;203;216;25m ' Earth' (0.1416)  \u001b[0m | \u001b[48;2;203;216;25m  ' the' (0.1137)   \u001b[0m | \u001b[48;2;229;226;0m  ' one' (0.0623)   \u001b[0m | \u001b[48;2;229;226;0m   ' in' (0.0521)   \u001b[0m\n",
       "\n",
       "== Top-5 Tokens ==\n",
-      "\u001b[48;2;25;152;204m   ' is' (0.8574)   \u001b[0m | \u001b[48;2;229;226;0m  ' does' (0.0317)  \u001b[0m | \u001b[48;2;229;226;0m  ' are' (0.0139)   \u001b[0m | \u001b[48;2;229;226;0m ' number' (0.0132) \u001b[0m | \u001b[48;2;229;226;0m   ' do' (0.0117)   \u001b[0m\n",
+      "\u001b[48;2;50;161;178m' natural' (0.7681) \u001b[0m | \u001b[48;2;229;226;0m ' small' (0.0611)  \u001b[0m | \u001b[48;2;229;226;0m' naturally' (0.0337)\u001b[0m | \u001b[48;2;229;226;0m' celestial' (0.0284)\u001b[0m | \u001b[48;2;229;226;0m ' large' (0.0152)  \u001b[0m\n",
       "\n",
       "== Top-5 Tokens ==\n",
-      "\u001b[48;2;50;161;178m    ' ' (0.7261)    \u001b[0m | \u001b[48;2;178;207;51m  ' the' (0.2180)   \u001b[0m | \u001b[48;2;229;226;0m   ' $' (0.0291)    \u001b[0m | \u001b[48;2;229;226;0m  ' $\\\\' (0.0045)   \u001b[0m | \u001b[48;2;229;226;0m   ' a' (0.0031)    \u001b[0m\n",
+      "\u001b[48;2;0;143;230m' satellite' (0.9390)\u001b[0m | \u001b[48;2;229;226;0m' celestial' (0.0347)\u001b[0m | \u001b[48;2;229;226;0m  ' body' (0.0108)  \u001b[0m | \u001b[48;2;229;226;0m ' object' (0.0040) \u001b[0m | \u001b[48;2;229;226;0m' astronomical' (0.0020)\u001b[0m\n",
       "\n",
       "== Top-5 Tokens ==\n",
-      "\u001b[48;2;76;170;153m    '2' (0.6050)    \u001b[0m | \u001b[48;2;203;216;25m    '3' (0.1603)    \u001b[0m | \u001b[48;2;229;226;0m    '5' (0.0723)    \u001b[0m | \u001b[48;2;229;226;0m    '1' (0.0590)    \u001b[0m | \u001b[48;2;229;226;0m    '4' (0.0504)    \u001b[0m\n",
+      "\u001b[48;2;25;152;204m   ' of' (0.8433)   \u001b[0m | \u001b[48;2;229;226;0m  ' that' (0.0611)  \u001b[0m | \u001b[48;2;229;226;0m    ',' (0.0376)    \u001b[0m | \u001b[48;2;229;226;0m ' orbit' (0.0143)  \u001b[0m | \u001b[48;2;229;226;0m    '.' (0.0092)    \u001b[0m\n",
       "\n",
       "== Top-5 Tokens ==\n",
-      "\u001b[48;2;25;152;204m   ' +' (0.8232)    \u001b[0m | \u001b[48;2;229;226;0m   ' *' (0.0518)    \u001b[0m | \u001b[48;2;229;226;0m' divided' (0.0163) \u001b[0m | \u001b[48;2;229;226;0m    '2' (0.0142)    \u001b[0m | \u001b[48;2;229;226;0m    '0' (0.0109)    \u001b[0m\n",
+      "\u001b[48;2;76;170;153m ' Earth' (0.6294)  \u001b[0m | \u001b[48;2;152;198;76m  ' the' (0.3315)   \u001b[0m | \u001b[48;2;229;226;0m  ' our' (0.0344)   \u001b[0m | \u001b[48;2;229;226;0m   ' a' (0.0019)    \u001b[0m | \u001b[48;2;229;226;0m ' planet' (0.0008) \u001b[0m\n",
       "\n",
       "== Top-5 Tokens ==\n",
-      "\u001b[48;2;0;143;230m    ' ' (0.9893)    \u001b[0m | \u001b[48;2;229;226;0m   ' (' (0.0050)    \u001b[0m | \u001b[48;2;229;226;0m   ' $' (0.0023)    \u001b[0m | \u001b[48;2;229;226;0m' something' (0.0003)\u001b[0m | \u001b[48;2;229;226;0m   ' ?' (0.0003)    \u001b[0m\n",
+      "\u001b[48;2;127;189;102m    ',' (0.4187)    \u001b[0m | \u001b[48;2;152;198;76m    '.' (0.3582)    \u001b[0m | \u001b[48;2;229;226;0m  '.\\n\\n' (0.0549)  \u001b[0m | \u001b[48;2;229;226;0m  ' and' (0.0485)   \u001b[0m | \u001b[48;2;229;226;0m   '.\\n' (0.0428)   \u001b[0m\n",
       "\n",
       "== Top-5 Tokens ==\n",
-      "\u001b[48;2;25;152;204m    '2' (0.8770)    \u001b[0m | \u001b[48;2;229;226;0m    '3' (0.0816)    \u001b[0m | \u001b[48;2;229;226;0m    '4' (0.0146)    \u001b[0m | \u001b[48;2;229;226;0m    '5' (0.0119)    \u001b[0m | \u001b[48;2;229;226;0m    '1' (0.0097)    \u001b[0m\n",
+      "\u001b[48;2;178;207;51m  ' and' (0.2976)   \u001b[0m | \u001b[48;2;203;216;25m ' which' (0.1362)  \u001b[0m | \u001b[48;2;229;226;0m   ' so' (0.0922)   \u001b[0m | \u001b[48;2;229;226;0m  ' with' (0.0718)  \u001b[0m | \u001b[48;2;229;226;0m ' orbit' (0.0674)  \u001b[0m\n",
       "\n",
       "== Top-5 Tokens ==\n",
-      "\u001b[48;2;76;170;153m   ' +' (0.6812)    \u001b[0m | \u001b[48;2;203;216;25m    '?' (0.1362)    \u001b[0m | \u001b[48;2;229;226;0m   '?\\n' (0.0577)   \u001b[0m | \u001b[48;2;229;226;0m  '?\\n\\n' (0.0542)  \u001b[0m | \u001b[48;2;229;226;0m   ' in' (0.0193)   \u001b[0m\n",
+      "\u001b[48;2;101;179;127m   ' it' (0.5054)   \u001b[0m | \u001b[48;2;229;226;0m  ' its' (0.0995)   \u001b[0m | \u001b[48;2;229;226;0m   ' is' (0.0787)   \u001b[0m | \u001b[48;2;229;226;0m ' Earth' (0.0533)  \u001b[0m | \u001b[48;2;229;226;0m  ' the' (0.0533)   \u001b[0m\n",
       "\n",
       "== Final Output ==\n",
-      "What is 2 + 2? Answer briefly. 2 + 2 is 4.\n",
-      "\n",
-      "**Question**\n",
-      "What is 2 + 2 +\n"
+      "Is the Moon Earth's satellite? Yes, the Moon is Earth's satellite. The Moon is a natural satellite of Earth, and it\n"
      ]
     }
    ],
    "source": [
-    "run_inference_loop(tokenizer, model, \"What is 2 + 2? Answer briefly.\")"
+    "run_inference_loop(tokenizer, model, \"Is the Moon Earth's satellite?\")"
    ]
   },
   {
